--- a/app/src/flav1/res/values/styles.xml
+++ b/app/src/flav1/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:backgroundTint">@color/red</item>
+        <item name="android:backgroundTint">@color/brown</item>
     </style>
 
     <style name="DetailMovie" parent="">
@@ -20,6 +20,7 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:backgroundTint">@color/brown</item>
     </style>
 
 
@@ -28,11 +29,13 @@
         <item name="android:padding">5dp</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:backgroundTint">@color/brown</item>
     </style>
     <style name="TextMovieList2">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_margin">10dp</item>
+        <item name="android:backgroundTint">@color/brown</item>
     </style>
 
     <style name="dimensionTextField" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
@@ -40,11 +43,14 @@
         <item name="android:layout_marginRight">30dp</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:backgroundTint">@color/brown</item>
     </style>
 
     <style name="UiText">
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">15sp</item>
         <item name="android:layout_margin">20sp</item>
+        <item name="android:backgroundTint">@color/brown</item>
+
     </style>
 </resources>
